# stbl

./: .codex.md  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  Cargo.toml  README.md  config.h.template  release-notes.md
.github/workflows/: ci.yml  release.yml
cmake_scripts/: Findcmark-gfm.cmake  add_and_run_test.cmake  external-projects.cmake
crates/stbl_cache/: Cargo.toml
crates/stbl_cache/src/: error.rs  lib.rs  store.rs
crates/stbl_cli/: Cargo.toml
crates/stbl_cli/assets/: stbl.template.yaml
crates/stbl_cli/src/: assets.rs  color_apply.rs  color_derive.rs  color_presets.rs  color_preview.rs  config_loader.rs  exec.rs  init.rs  lib.rs  main.rs  media.rs  precompress.rs  preview.rs  upgrade.rs  verify.rs  walk.rs
crates/stbl_cli/tests/: assets_overlay.rs  embedded_assets_build.rs  image_formats.rs  image_resize.rs  incremental_cache.rs  incremental_minimal_rebuild.rs  init.rs  precompress.rs  preview.rs  upgrade.rs  video_pipeline.rs
crates/stbl_core/: Cargo.toml
crates/stbl_core/src/: abstracts.rs  assemble.rs  assets.rs  blog_index.rs  comments.rs  config.rs  feeds.rs  header.rs  lib.rs  macros.rs  main.rs  media.rs  model.rs  plan.rs  project.rs  render.rs  syntax_highlight.rs  templates.rs  theme.rs  title.rs  url.rs  visibility.rs
crates/stbl_core/src/templates/: base.html  blog_index.html  page.html  series_index.html  tag_index.html
crates/stbl_core/src/templates/partials/: footer.html  list_item.html
crates/stbl_core/tests/: assets_plan.rs  envelope.rs  image_plan.rs  media_parse.rs  media_render.rs  plan.rs  plan_fingerprints.rs  url.rs
crates/stbl_core/tests/fixtures/site-brand/: stbl.yaml
crates/stbl_core/tests/fixtures/site-header-layout/: stbl.yaml
crates/stbl_core/tests/fixtures/site-header-layout/articles/: index.md
crates/stbl_core/tests/fixtures/site-media/: stbl.yaml
crates/stbl_core/tests/fixtures/site-media/articles/: banner-page.md  index.md  video-page.md
crates/stbl_core/tests/fixtures/site-pagination/: stbl.yaml
crates/stbl_core/tests/fixtures/site-pagination/articles/: index.md  page1.md  page10.md  page2.md  page3.md  page4.md  page5.md  page6.md  page7.md  page8.md  page9.md
crates/stbl_core/tests/fixtures/site-pagination/articles/series/: index.md  part1.md  part2.md  part3.md  part4.md  part5.md
crates/stbl_core/tests/fixtures/site1/: stbl.yaml
crates/stbl_core/tests/fixtures/site1-rss/: stbl.yaml
crates/stbl_core/tests/fixtures/site1-rss/articles/: index.md  info.md  page1.md  page2.md
crates/stbl_core/tests/fixtures/site1-rss/articles/series/: part1.md  part2.md  part3.md
crates/stbl_core/tests/fixtures/site1/articles/: excluded.md  page1.md  page2.md
crates/stbl_core/tests/fixtures/site1/articles/series/: index.md  part1.md  part2.md
crates/stbl_embedded_assets/: Cargo.toml  build.rs
crates/stbl_embedded_assets/assets/: color-presets.yaml
crates/stbl_embedded_assets/src/: generated.rs  lib.rs
crates/stbl_embedded_assets/tests/: embedded_assets.rs
doc/: article-header.md  blog-index.md  config-schema.md  macros.md  makefile  media.md  stbl-process.dot  validation.md
docs/: caching.md  cli.md  color-themes.html  content-format.md  faq.md  getting-started.md  media.md  page-types.md  project-structure.md  series.md  templates-and-themes.md  timestamps.md
examples/blog/: stbl.yaml
examples/blog/articles/: contact.md  index.md
examples/blog/articles/_blog/: cats_are_cool.md  dogs_are_awesome.md  i_have_a_car.md  i_like_cakes.md  i_work_a_lot.md  my_vacation.md  star_trek_versus_star_wars.md
examples/blog/articles/the_evolution_of_star_trek/: 01_the_original_series.md  02_the_animated_series.md  03_the_next_generation.md  04_deep_space_nine.md  05_voyager.md  06_enterprise.md  07_discovery.md  08_short_treks.md  09_picard.md  10_lower_decks.md  11_prodigy.md  12_strange_new_worlds.md  index.md
examples/blog/assets/: README.md
examples/bootstrap/: stbl.conf  stbl.yaml
examples/bootstrap/articles/: Yet_another_static_blog_generator.md
examples/bootstrap/artifacts/: default.css  desktop.css  mobile.css
examples/bootstrap/artifacts/feather/: .directory
examples/bootstrap/templates/: article-in-compact-list.html  article-in-list.html  article-in-series.html  article.html  compact-article-list.html  disqus.html  footer.html  frontpage.html  info.html  intensedebate.html  landingpage.html  latest-articles-header.html  menu.html  next.html  page-header.html  prev.html  pubdate.html  read-time.html  series.html  social_handles.html  tags.html  up.html  updatedate.html
examples/default/: stbl.conf  stbl.yaml
examples/default/articles/: Yet_another_static_blog_generartor.md  Yet_another_static_blog_generator.md  about.md  banner_example.md  index.md  responsive_image.md  video_example.md
examples/default/articles/_c++/: program_examples.md
examples/default/artifacts/: default.css  desktop.css
examples/default/templates/: article-in-list.html  article.html  author.html  footer.html  frontpage.html  next.html  page-header.html  prev.html  pubdates.html  site-header.html  social-handle.html  submenu.html  tag.html  updatedate.html
examples/landing/: stbl.yaml
examples/landing/articles/: about.md  blog.md  index.md
include/stbl/: Article.h  BlogPost.h  Bootstrap.h  Content.h  ContentManager.h  HeaderParser.h  Image.h  ImageMgr.h  MarkdownNode.h  Node.h  Options.h  Page.h  Scanner.h  Series.h  Sitemap.h  logging.h  pipe.h  stbl.h  utility.h
scripts/: validate.sh
specs/: comments.md  embedded-icons.md  macros.md  template-mapping.md  themes.md
src/: CMakeLists.txt
src/libstbl/: ArticleImpl.cpp  BlogPost.cpp  BootstrapImpl.cpp  CMakeLists.txt  ContentImpl.cpp  ContentManagerImpl.cpp  DirectoryScannerImpl.cpp  HeaderParserImpl.cpp  ImageImpl.cpp  ImageMgrImpl.cpp  PageImpl.cpp  SeriesImpl.cpp  SitemapImpl.cpp  logging.cpp  utility.cpp
src/mkres/: CMakeLists.txt  main.cpp
src/stbl/: CMakeLists.txt  config.h.template  main.cpp
tests/: CMakeLists.txt  stbl_links_in_lists.cpp  stbl_tests.h  test_helper.h
(+25 files in other folders)
