[package]
name = "stbl_core"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
blake3 = "1.5"
thiserror = "1"
chrono = "0.4"
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
serde_json = "1"
pulldown-cmark = "0.13"
minijinja = "2"
syntect = { version = "5", features = ["html"] }
syntect-assets = "0.23"
pulldown-cmark-toc = "0.7"
stbl_embedded_assets = { path = "../stbl_embedded_assets" }

[features]
default = ["avif"]
avif = []
